@@ -687,6 +687,23 @@ void SpawnShell::updateSpawnHP(const hpUpdateStruct* hpupdate)
    }
 }
 
+void SpawnShell::updateNpcHP(const hpNpcUpdateStruct* hpupdate)
+{
+#ifdef SPAWNSHELL_DIAG
+   printf("SpawnShell::updateNpcHP(id=%d, hp=%d)\n", 
+	  hpupdate->spawnId, hpupdate->curHp);
+#endif
+   Item* item = m_spawns.find(hpupdate->spawnId);
+   if (item != NULL)
+   {
+     Spawn* spawn = (Spawn*)item;
+     spawn->setHP(hpupdate->curHp);
+     spawn->setMaxHP(100);
+     item->updateLastChanged();
+     emit changeItem(item, tSpawnChangedHP);
+   }
+}
+
 void SpawnShell::spawnWearingUpdate(const wearChangeStruct *wearing)
 {
   Item* item = m_spawns.find(wearing->spawnId);
